--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,13 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.62-beta'
+	testCompile 'xmlunit:xmlunit:1.6'
     
     compile 'commons-io:commons-io:2.4'
 	compile 'com.google.code.gson:gson:2.8.0'
 	compile 'org.apache.httpcomponents:httpclient:4.5.2'
+	compile 'commons-httpclient:commons-httpclient:3.1'
+	
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
