--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.62-beta'
+	testCompile 'xmlunit:xmlunit:1.6'
+    
     
     compile 'commons-io:commons-io:2.4'
 	compile 'com.google.code.gson:gson:2.8.0'
