--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
 	compile 'com.google.code.gson:gson:2.8.0'
 	compile 'org.apache.httpcomponents:httpclient:4.5.2'
+	compile 'commons-httpclient:commons-httpclient:3.1'
+	
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
