--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ repositories {
 	mavenCentral()
 }
 
+test.doFirst {
+	if (gradle.taskGraph.getAllTasks().contains(build)) {
+		throw new StopExecutionException()
+	}
+}
+
 dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.62-beta'
